+b935dd444b0e588e024b2ce07867bc49f01ed4cd

--- a/static/js/template.html
+++ b/static/js/template.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="renderer" content="webkit">
-  <title>土巴兔装修公司项目管理</title>
+  <title>兔信商家后台</title>
   <link href="./static/tree-table/lib/ligerUI/skins/Aqua/css/index.css" rel="stylesheet" type="text/css" />
   <link href="./static/tree-table/lib/ligerUI/skins/Gray/css/index.css" rel="stylesheet" type="text/css" />
 </head>
