--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="renderer" content="webkit">
-  <title>土巴兔装修公司</title>
+  <title>兔信商家后台</title>
   <link href="./static/tree-table/lib/ligerUI/skins/Aqua/css/index.css" rel="stylesheet" type="text/css" />
   <link href="./static/tree-table/lib/ligerUI/skins/Gray/css/index.css" rel="stylesheet" type="text/css" />
 </head>
@@ -15,6 +15,6 @@
   <div id="app">
   </div>
   <script src="./static/tree-table/lib/ligerUI/js/index.min.js" type="text/javascript"></script>
-<script type="text/javascript" src="static/js/vendor.266546a4.dll.js"></script></body>
+<script type="text/javascript" src="static/js/vendor.467fdcaa.dll.js"></script></body>
 
 </html>
