--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="renderer" content="webkit">
   <title>土巴兔商家后台</title>
+  <link href="./static/favicon.ico" rel="shortcut icon">
   <link href="./static/tree-table/lib/ligerUI/skins/Aqua/css/index.css" rel="stylesheet" type="text/css" />
   <link href="./static/tree-table/lib/ligerUI/skins/Gray/css/index.css" rel="stylesheet" type="text/css" />
 </head>
