+2c4efbac16bc1194d177bc42e4945952d995bc7e

--- a/static/js/template.html
+++ b/static/js/template.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="renderer" content="webkit">
+  <link href="./static/favicon.ico" rel="shortcut icon">
   <title>土巴兔商家后台</title>
   <link href="./static/tree-table/lib/ligerUI/skins/Aqua/css/index.css" rel="stylesheet" type="text/css" />
   <link href="./static/tree-table/lib/ligerUI/skins/Gray/css/index.css" rel="stylesheet" type="text/css" />
